2015-06-18 Martin Grønholdt

* slighttp/http-fs.c: Almost done.

2015-06-17 Martin Grønholdt (committed)

* user_main.c (user_init): No auto reconnect.
* net/tcp.c (send_buffer): Renamed to tcp_send_buffer.
*			(tcp_send): Little bug in debug output, address of send_buffer instead of send_buffers.
*		   : Removed last traces of the timer and call back used for clean up earlier.
*			(tcp_disconnect_cb): Restored the original handler, that passes on questionable values. 
* net/tcp.h (send_buffer): Renamed to tcp_send_buffer.
* 			: Changed buffer to 1024 bytes.


2015-06-16 Martin Grønholdt

* net-/tcp.h: Added tcp_free.
*		    : Added state_names.
* sm_http.c: Implemented http_fs_destroy.
*          : Finished http_fs_test.
*           (http_response_handler): Renamed test_uri, will_handle.
*		    (http_response_handler): Split handler into handlers for each request method.
*									 And but them in array, that is ordered so that request_types
*									 works for indexing them, by subtracting one.
* slighttp/http.h: Changed parameter of handler call backs to a http_response pointer.
*                 (http_response): Added context pointer.
*				  (http_get_handlers): Changed parameter to a struct http_request pointer.
* slighttp/http-response.c (http_get_handlers): Changed parameter to a struct http_request pointer.
* sm_wifi.c (wifi_connected): Call http_send on connection.


2015-06-15 Martin Grønholdt

* fs/fs.c (fs_open): Don't warn on file not found, just tell in a debuggy way.
*         (fs_close): Test handle before freeing the memory.
* net/tcp.c (init_tcp): Return boolean.
*			(tcp_listen: Return boolean.
*		   : Added tcp_get_connections.
* net/tcp.h (init_tcp): Return boolean.
*			(tcp_listen: Return boolean.
*		   : Added tcp_get_connections.
* slighttp/http.c (init_http): Return boolean.
* slighttp/http.h (init_http): Return boolean.
* 				  (http_request): Added response.
*                 (http_response): Re purposed http_response.