@@ -3,3 +3,30 @@ WIFI controlled mains switch.
 
 WIFI controlled mains switch using ESP8266.
 
+
+Credits.
+========
+
+Peter Scargill (http://tech.scargill.net/)
+------------------------------------------
+
+Last piece in the puzzle, that turns of the ESP8266 messages, namely ets_printf
+still works.
+
+Dave Hylands (http://www.davehylands.com/)
+------------------------------------------
+
+Suggested using a zip file, as file system image, and shared his code
+
+
+Owen Versteeg (http://owenversteeg.com/)
+----------------------------------------
+
+min CSS framework.
+
+
+Todd Motto (http://toddmotto.com/)
+----------------------------------
+
+atomic Ajax/XHR javascript framework.
+
